syntax = "proto3";

import "common.proto";

package com.perpustakaan.proto;

service BukuService {
    rpc GetAllBuku(Empty) returns (BukuList);
    rpc CreateBuku (CreateBukuRequest) returns (Buku);
    rpc GetBukuById (BukuIdRequest) returns (Buku);
    rpc UpdateBuku (Buku) returns (Buku);
    rpc DeleteBuku (BukuIdRequest) returns (Empty);
}

message Buku {
    int64 idBuku = 1;
    string judulBuku = 2;
    string penulis = 3;
    int64 kuantitas = 4;
    string tempatPenyimpanan = 5;
}

message CreateBukuRequest {
    string judulBuku = 1;
    string penulis = 2;
    int64 kuantitas = 3;
    string tempatPenyimpanan = 4;
}

message BukuIdRequest {
    int64 idBuku = 1;
}


message UpdateBukuRequest {
    int64 idBuku = 1;
    Buku buku = 2;  
}

message DeleteBukuResponse {
    bool deleted = 1;
}

message BukuList {
    repeated Buku bukus = 1;  
}
